@@ -1,5 +1,9 @@
 2007-07-14  Satoshi Nakagawa <artension@gmail.com>
 
+	Added small scroller support on the code level.
+
+2007-07-14  Satoshi Nakagawa <artension@gmail.com>
+
 	Added support for \r as new line.
 
 2007-07-13  Satoshi Nakagawa <artension@gmail.com>
